# ohiyo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  GO-LIVE.md  LAUNCH-STATUS.md  README.md  ROADMAP.md  SECURITY.md  UX-GATES.md  kikkacord-guide.html
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
brand/: LAUNCH-KIT.md  VOICE.md
client/: .env.example  .env.production  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/crates/goodnight/: Cargo.toml
client/src-tauri/crates/goodnight/src/: lib.rs
client/src-tauri/crates/vault/: Cargo.toml
client/src-tauri/crates/vault/src/: lib.rs
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  vault.rs
docs/: call-screen-polish-lab.html  call-screen-real-device-smoke-test.md  channel-welcome-polish-lab.html  chat-composer-polish-lab.html  discord-import-live-smoke-test.md  discord-template-migration.md  download-color-lab.html  font-direction-lab.html  font-mono-tech-lab.html  hosted-community-cost-model.md  interaction-button-lab.html  landing-color-lab.html  library-inspired-button-lab.html  macos-notarized-release-runbook.md  ohiyo-polish-checklist.html  premium-component-lab.html  push-mobile-runbook.md  recovery-backup-v2.md  reliability-runbook.md  rocky-metal-component-lab.html  server-pack-export.md  silver-first-component-lab.html  steel-blue-vs-sage-lab.html
e2e/: 01-signup.test.mjs  02-invite.test.mjs  03-alive.test.mjs  04-actions.test.mjs  05-moderation.test.mjs  06-roles.test.mjs  07-polls.test.mjs  08-mentions.test.mjs  09-events.test.mjs  10-saved.test.mjs  11-categories.test.mjs  12-forward.test.mjs  13-drafts.test.mjs  14-failed-retry.test.mjs  15-images.test.mjs  16-outbox.test.mjs  17-receipts.test.mjs  18-plugin-sandbox.test.mjs  19-e2e-dm.test.mjs  20-disappearing.test.mjs  21-multidevice.test.mjs  22-group-e2e.test.mjs  23-call-smoke.test.mjs  24-screen-share-smoke.test.mjs  25-listen-only-call.test.mjs  26-privacy-mode.test.mjs  27-private-dm-links.test.mjs  28-mobile-friend-flow.test.mjs  README.md  harness.mjs  run.mjs
pitch/: deck.css  deck.js  index.html  launch.html  ohiyo.html
scripts/: backup-restore-drill.sh  (+5 more)
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh  fly.toml
server/migrations/: 0001_initial.sql  0002_profiles_files.sql  0003_reactions.sql  0004_emoji_badges.sql  0005_invites.sql  0006_replies.sql  0007_pins.sql  0008_bans.sql  0009_roles.sql  0010_polls.sql  0011_events.sql  0012_saved.sql  0013_categories.sql  0014_image_dims.sql  0015_read_receipts.sql  0016_embeds.sql  0017_e2e_keys.sql  0018_signal_prekeys.sql  0019_disappearing.sql  0020_signal_multidevice.sql  0021_deadman.sql  0022_key_backup.sql  0023_group_epoch.sql  0024_banner_url.sql  0025_device_tombstones.sql  0026_device_link_tokens.sql  0027_hosted_instances.sql  0028_discord_import.sql  0029_friends.sql  0030_profile_top_songs.sql  0031_token_version.sql  0032_hot_indexes.sql  0033_private_dm_links.sql  0034_hosted_instances_lifecycle.sql  0035_push_relay.sql  0036_discord_template_migration.sql  0037_abuse_safety.sql  0038_channel_permission_overwrites.sql  0039_push_dispatch.sql
server/src/: instance_router.rs  lib.rs  main.rs  ratelimit.rs  search.rs  types.rs
server/src/api/: abuse.rs  auth.rs  channels.rs  discord_import.rs  dm_links.rs  embeds.rs  emoji.rs  error.rs  events.rs  files.rs  ice.rs  instances.rs  invites.rs  keys.rs  livekit.rs  messages.rs  mod.rs  og.rs  polls.rs  profile.rs  push.rs  reactions.rs  reliability.rs  roles.rs  saved.rs  search.rs  server_pack.rs  servers.rs  signal.rs  users.rs  watch.rs
server/src/auth/: mod.rs
server/src/db/: mod.rs
server/src/gateway/: mod.rs
server/src/import/: assets.rs  attachments.rs  discord_template.rs  discrawl.rs  mapper.rs  mod.rs  model.rs  report.rs
server/src/provision/: fake.rs  fly.rs  mod.rs
server/tests/: abuse_safety.rs  channel_permissions.rs  device_link.rs  file_range.rs  file_serving.rs  group_rekey.rs  instance_router.rs  instances.rs  push_relay.rs  reliability.rs  security_boundaries.rs  server_pack.rs  signal_identity.rs  upload_quota.rs
server/tests/common/: mod.rs
(+143 files in other folders)
