[package]
name = "server"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features = false drops the MySQL/Postgres backends (and the transitive `rsa`
# crate, RUSTSEC-2023-0071) that sqlx's default `any` feature would otherwise link.
# We only ever talk to embedded SQLite via runtime queries, so we enable exactly the
# backend/runtime/migrate/type features actually used — no network TLS backend needed.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures-util = "0.3"
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
url = "2"
urlencoding = "2"
imagesize = "0.13"
tar = "0.4"
flate2 = "1"
