# Vendored from New1Direction/ningen-shikkaku (dazai), MIT-licensed. Secure-memory
# primitives: page-locked (mlock), non-swappable, explicitly-wiped buffers. Kept as a
# standalone crate (workspace inheritance stripped) so Kikkacord's Tauri app can build
# it directly. Upstream: https://github.com/New1Direction/ningen-shikkaku
[package]
name = "goodnight"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Secure memory primitives: page-locked, non-swappable, explicitly-wiped buffers (vendored from dazai)"

[dependencies]
libc = "0.2"
