[package]
name = "kikka-vault"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Locked-RAM key vault for Kikkacord E2E keys (dazai/goodnight-backed) with AES-256-GCM sealed-at-rest persistence and explicit burn."

[dependencies]
goodnight = { path = "../goodnight" }
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
